--- a/src/app/books/containers/books/books.container.html
+++ b/src/app/books/containers/books/books.container.html
@@ -1,32 +1,17 @@
 <div id="books">
-  <ng-container *ngIf="books$ | async as books; else loading">
-    <books-component 
-      [books]="books"
-      (editClicked)="showEditModal($event)"
-      (deleteClicked)="showDeleteModal($event)"
-    > </books-component>
-    <div id="nfBooks" *ngIf="emptyResult">
-      <h2>Books not found</h2>
-    </div>
-  </ng-container>
-  <app-paginator
-    [records]="booksQuantity"
-    [limits]="[10, 25, 50, 75, 100, 125, 150]"
-    (changed)="changePageSize($event)"
-    [class.hide]="emptyResult"
-  >
-  </app-paginator>
-  <ng-template #loading>
-    <div id="spinner">
-      <mat-spinner></mat-spinner>
-    </div>
-  </ng-template>
+    <ng-container *ngIf="books$ | async as books; else loading">
+        <books-component [books]="books" (editClicked)="showEditModal($event)" (deleteClicked)="showDeleteModal($event)"> </books-component>
+        <div id="nfBooks" *ngIf="emptyResult">
+            <h2>Books not found</h2>
+        </div>
+    </ng-container>
+    <app-paginator [records]="booksQuantity" [limits]="[10, 25, 50, 75, 100, 125, 150]" (changed)="changePageSize($event)" [class.hide]="emptyResult">
+    </app-paginator>
+    <ng-template #loading>
+        <div id="spinner">
+            <mat-spinner></mat-spinner>
+        </div>
+    </ng-template>
 </div>
-<ng-container *ngIf="genres$ | async as genres">
-  <filters-container
-    [genres]="genres"
-    (applyForm)="getFilteredBooks($event)"
-    (resetForm)="resetFilters()"
-  >
-  </filters-container>
-</ng-container>
+<filters-container [genres]="genres" (applyForm)="getFilteredBooks($event)" (resetForm)="resetFilters()">
+</filters-container>
