feat(books-module): new books loadscreen

--- a/src/app/books/components/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/books/components/book-edit-modal/book-edit-modal.component.html
@@ -63,7 +63,7 @@
 
     <div mat-dialog-actions>
         <button mat-button color="warn" [mat-dialog-close]="false">Cancel</button>
-        <button mat-button color="primary" [mat-dialog-close]="onConfirm()" cdkFocusInitial>
+        <button mat-button color="primary" (click)="onConfirm()" cdkFocusInitial>
       Apply
     </button>
         <!-- <ng-container *ngIf="bookEditForm.valid; else disabled">
