--- a/src/app/books/components/confirming-delete-modal/confirming-delete-modal.component.html
+++ b/src/app/books/components/confirming-delete-modal/confirming-delete-modal.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Delete confirmation</h1>
 <div mat-dialog-content>
-  Are you sure want to delete book: "{{ book.title }}" ?
+    Are you sure want to delete book: "{{ book.title }}" ?
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="book.id">Confirm</button>
-  <button mat-button [mat-dialog-close]="false">Close</button>
+    <button mat-button color="primary" [mat-dialog-close]="false">Close</button>
+    <button mat-button color="warn" [mat-dialog-close]="book.id">Confirm</button>
 </div>
