feat(books-module): corrections

--- a/src/app/books/components/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/books/components/book-edit-modal/book-edit-modal.component.html
@@ -62,7 +62,7 @@
     </form>
 
     <div mat-dialog-actions>
-        <button mat-button color="warn" [mat-dialog-close]="false">Cancel</button>
+        <button mat-button color="warn" mat-dialog-close>Cancel</button>
         <button mat-button color="primary" (click)="onConfirm()" cdkFocusInitial>
       Apply
     </button>
