--- a/src/app/auth/containers/auth/auth.container.html
+++ b/src/app/auth/containers/auth/auth.container.html
@@ -1,1 +1,1 @@
-<auth-component (submitForm)="login($event)"></auth-component>
+<auth-component [submit$]="auth.submit$" (submitForm)="login($event)"></auth-component>
