--- a/src/app/auth/components/auth/auth.component.html
+++ b/src/app/auth/components/auth/auth.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="loginForm" (ngSubmit)="submit()">
     <mat-form-field class="example-full-width">
         <mat-label>E-mail</mat-label>
-        <input matInput notLetters formControlName="emailCtl" maxlength="15" />
+        <input matInput formControlName="emailCtl" maxlength="15" />
         <mat-error *ngIf="email.hasError('email')"> Incorrect email </mat-error>
         <mat-error *ngIf="email.hasError('required')"> Enter your email </mat-error>
     </mat-form-field>
@@ -16,10 +16,21 @@
       <mat-icon>{{ hidePas ? "visibility_off" : "visibility" }}</mat-icon>
     </button>
     </mat-form-field>
-    <ng-container *ngIf="loginForm.valid; else disabled">
-        <button type="submit" mat-button color="primary">Login</button>
+
+    <ng-container *ngIf="submit$ | async; else formButtons">
+        <button mat-button disabled>
+            <span class="animated_dots">...</span>
+        </button>
     </ng-container>
-    <ng-template #disabled>
-        <button mat-button disabled>Login</button>
+    <ng-template #formButtons>
+        <ng-container *ngIf="loginForm.valid; else disabled">
+            <button type="submit" mat-button color="primary">Login</button>
+        </ng-container>
+        <ng-template #disabled>
+            <button mat-button disabled>
+                Login
+            </button>
+        </ng-template>
     </ng-template>
+
 </form>
