--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -4,6 +4,13 @@ mat-toolbar {
     display: flex;
     justify-content: space-between;
 }
-app-search{
+
+app-search {
     margin-right: 20px;
+}
+
+div {
+    #person {
+        margin-right: 15px;
+    }
 }
