--- a/src/app/books/components/filters/filters.component.html
+++ b/src/app/books/components/filters/filters.component.html
@@ -1,85 +1,98 @@
 <form [formGroup]="filtersForm" (ngSubmit)="applyFilters()">
-    <mat-form-field appearance="fill">
-        <mat-label>Select genres</mat-label>
-        <mat-select multiple formControlName="genres">
-            <mat-option *ngFor="let genre of genres" [value]="genre.name">
-                {{ genre.name }}</mat-option>
-        </mat-select>
-    </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Select genres</mat-label>
+    <mat-select multiple formControlName="genres">
+      <mat-option *ngFor="let genre of genres" [value]="genre.name">
+        {{ genre.name }}</mat-option
+      >
+    </mat-select>
+  </mat-form-field>
 
-    <mat-accordion class="example-headers-align" multi>
-        <mat-expansion-panel formGroupName="prices">
-            <mat-expansion-panel-header>
-                <mat-panel-title> Prices </mat-panel-title>
-                <mat-panel-description>
-                    <mat-icon>payment</mat-icon>
-                </mat-panel-description>
-            </mat-expansion-panel-header>
+  <mat-accordion class="example-headers-align" multi>
+    <mat-expansion-panel formGroupName="prices">
+      <mat-expansion-panel-header>
+        <mat-panel-title> Prices </mat-panel-title>
+        <mat-panel-description>
+          <mat-icon>payment</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
 
-            <mat-form-field class="example-full-width">
-                <mat-label>Price from</mat-label>
-                <input matInput notLetters formControlName="minPrice" maxlength="5" />
-                <span matPrefix>$&nbsp;</span>
-                <mat-error *ngIf="minPrice.hasError('priceError')">
-                    Minimal price could not be biggest than maximal
-                </mat-error>
-            </mat-form-field>
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Price from</mat-label>
+        <input matInput notLetters formControlName="minPrice" maxlength="5" />
+        <span matPrefix>$&nbsp;</span>
+        <mat-error *ngIf="minPrice.hasError('priceError')">
+          Minimal price could not be biggest than maximal
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field class="example-full-width">
-                <mat-label>Price to</mat-label>
-                <input matInput notLetters formControlName="maxPrice" maxlength="5" />
-                <span matPrefix>$&nbsp;</span>
-            </mat-form-field>
-        </mat-expansion-panel>
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Price to</mat-label>
+        <input matInput notLetters formControlName="maxPrice" maxlength="5" />
+        <span matPrefix>$&nbsp;</span>
+      </mat-form-field>
+    </mat-expansion-panel>
 
-        <mat-expansion-panel formGroupName="releases">
-            <mat-expansion-panel-header>
-                <mat-panel-title> Book releases </mat-panel-title>
-                <mat-panel-description>
-                    <mat-icon>date_range</mat-icon>
-                </mat-panel-description>
-            </mat-expansion-panel-header>
+    <mat-expansion-panel formGroupName="releases">
+      <mat-expansion-panel-header>
+        <mat-panel-title> Book releases </mat-panel-title>
+        <mat-panel-description>
+          <mat-icon>date_range</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
 
-            <mat-form-field color="accent" appearance="fill">
-                <mat-label>Release date from</mat-label>
-                <input matInput dateMask [matDatepicker]="pickerFrom" formControlName="releaseDateFrom" maxlength="10" />
-                <mat-datepicker-toggle matSuffix [for]="pickerFrom">
-                </mat-datepicker-toggle>
-                <mat-datepicker #pickerFrom startView="multi-year"> </mat-datepicker>
-                <mat-error *ngIf="releaseDateFrom.hasError('releaseError')">
-                    First release date could not be biggest than second
-                </mat-error>
-                <mat-error *ngIf="releaseDateFrom.hasError('matDatepickerParse')">
-                    Date must be in format: YYYY-MM-DD
-                </mat-error>
-            </mat-form-field>
+      <mat-form-field color="accent" appearance="outline">
+        <mat-label>Release date from</mat-label>
+        <input
+          matInput
+          dateMask
+          [matDatepicker]="pickerFrom"
+          formControlName="releaseDateFrom"
+          maxlength="10"
+        />
+        <mat-datepicker-toggle matSuffix [for]="pickerFrom">
+        </mat-datepicker-toggle>
+        <mat-datepicker #pickerFrom startView="multi-year"> </mat-datepicker>
+        <mat-error *ngIf="releaseDateFrom.hasError('releaseError')">
+          First release date could not be biggest than second
+        </mat-error>
+        <mat-error *ngIf="releaseDateFrom.hasError('matDatepickerParse')">
+          Date must be in format: YYYY-MM-DD
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field color="accent" appearance="fill">
-                <mat-label>Release date to</mat-label>
-                <input matInput dateMask [matDatepicker]="pickerTo" formControlName="releaseDateTo" maxlength="10" />
-                <mat-datepicker-toggle matSuffix [for]="pickerTo">
-                </mat-datepicker-toggle>
-                <mat-datepicker #pickerTo startView="multi-year"> </mat-datepicker>
-                <mat-error *ngIf="releaseDateTo.hasError('matDatepickerParse')">
-                    Date must be in format: YYYY-MM-DD
-                </mat-error>
-            </mat-form-field>
-        </mat-expansion-panel>
-    </mat-accordion>
+      <mat-form-field color="accent" appearance="outline">
+        <mat-label>Release date to</mat-label>
+        <input
+          matInput
+          dateMask
+          [matDatepicker]="pickerTo"
+          formControlName="releaseDateTo"
+          maxlength="10"
+        />
+        <mat-datepicker-toggle matSuffix [for]="pickerTo">
+        </mat-datepicker-toggle>
+        <mat-datepicker #pickerTo startView="multi-year"> </mat-datepicker>
+        <mat-error *ngIf="releaseDateTo.hasError('matDatepickerParse')">
+          Date must be in format: YYYY-MM-DD
+        </mat-error>
+      </mat-form-field>
+    </mat-expansion-panel>
+  </mat-accordion>
 
-    <div></div>
-
-    <ng-container *ngIf="filtersForm.touched && filtersForm.valid; else disabled">
-        <div id="buttons">
-            <button type="submit" mat-button color="primary">Accept filters</button>
-            <ng-container *ngIf="!filtersForm.hasError('emptyForm')">
-                <button type="submit" mat-button color="warn" (click)="resetFilters()">
-          Reset filters
-        </button>
-            </ng-container>
-        </div>
+  <div id="buttons">
+    <button
+      type="submit"
+      mat-button
+      color="primary"
+      [disabled]="filtersForm.invalid"
+    >
+      Accept filters
+    </button>
+    <ng-container *ngIf="!filtersForm.hasError('emptyForm')">
+      <button type="submit" mat-button color="warn" (click)="resetFilters()">
+        Reset filters
+      </button>
     </ng-container>
-    <ng-template #disabled>
-        <button mat-button disabled>Accept filters</button>
-    </ng-template>
+  </div>
 </form>
