--- a/src/app/register/components/second-step/second-step.component.html
+++ b/src/app/register/components/second-step/second-step.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
     <mat-form-field class="example-full-width">
-        <input matInput notDigits placeholder="Country name" [matAutocomplete]="auto" [formControl]="country" required />
+        <input matInput notDigits [matAutocomplete]="auto" formControlName="countryAndCity" placeholder="Country name" required />
         <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let country of countries$ | async" [value]="country.name">
                 <img class="country-option-img" aria-hidden [src]="country.flag" height="25" />
@@ -11,7 +11,7 @@
     </mat-form-field>
     <mat-form-field>
         <mat-label>Address</mat-label>
-        <input matInput formControlName="addressCtl" placeholder="Ex. 1 Main St, New York, NY" required />
+        <input matInput formControlName="streetAndIndex" placeholder="Ex. 1 Main St, New York, NY" required />
     </mat-form-field>
     <div>
         <button mat-button matStepperPrevious>Back</button>
