--- a/src/app/register/components/third-step/third-step.component.html
+++ b/src/app/register/components/third-step/third-step.component.html
@@ -1,29 +1,24 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-form-field>
         <mat-label>Card number</mat-label>
-        <input matInput cardNumberMask formControlName="cardNumberCtl" maxlength="19" placeholder="1234 5678 9012 3456" required />
+        <input matInput cardNumberMask formControlName="cardNumber" maxlength="19" placeholder="1234 5678 9012 3456" required />
     </mat-form-field>
     <div id="cardInf">
         <div id="cardDate">
             <mat-form-field>
-                <input matInput formControlName="cardMonthCtl" placeholder="MM" maxlength="2" required />
+                <input matInput formControlName="cardMonth" placeholder="MM" maxlength="2" required />
             </mat-form-field>
             <p>/</p>
             <mat-form-field>
-                <input matInput formControlName="cardYearCtl" placeholder="YY" maxlength="2" required />
+                <input matInput formControlName="cardYear" placeholder="YY" maxlength="2" required />
             </mat-form-field>
         </div>
         <mat-form-field>
-            <input type="password" matInput cardNumberMask formControlName="cardCVVCtl" placeholder="CVV" maxlength="3" required />
+            <input type="password" matInput cardNumberMask formControlName="cardCVV" placeholder="CVV" maxlength="3" required />
         </mat-form-field>
     </div>
     <div>
         <button mat-button matStepperPrevious>Back</button>
-        <ng-container *ngIf="form.valid; else invalidForm">
-            <button mat-button (click)="clickRegister.emit()">Registrate</button>
-        </ng-container>
-        <ng-template #invalidForm>
-            <button mat-button disabled>Registrate</button>
-        </ng-template>
+        <button type="submit" mat-button [disabled]="form.invalid">Registrate</button>
     </div>
 </form>
