--- a/src/app/register/components/first-step/first-step.component.html
+++ b/src/app/register/components/first-step/first-step.component.html
@@ -1,21 +1,93 @@
 <form [formGroup]="form">
+  <div>
     <mat-form-field>
-        <mat-label>Firstname</mat-label>
-        <input matInput notDigits formControlName="firstName" placeholder="John" required />
+      <mat-label>Firstname</mat-label>
+      <input
+        matInput
+        notDigits
+        formControlName="firstName"
+        placeholder="John"
+        required
+      />
     </mat-form-field>
     <mat-form-field>
-        <mat-label>Lastname</mat-label>
-        <input matInput notDigits formControlName="lastName" placeholder="Doe" required />
+      <mat-label>Lastname</mat-label>
+      <input
+        matInput
+        notDigits
+        formControlName="lastName"
+        placeholder="Doe"
+        required
+      />
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field>
+      <mat-label>E-mail</mat-label>
+      <input
+        matInput
+        placeholder="jdoe@gmail.com"
+        formControlName="email"
+        required
+      />
     </mat-form-field>
     <mat-form-field>
-        <mat-label>E-mail</mat-label>
-        <input matInput placeholder="jdoe@gmail.com" formControlName="email" required />
+      <mat-label>Phone number</mat-label>
+      <input
+        matInput
+        phoneMask
+        formControlName="phoneNumber"
+        maxlength="17"
+        placeholder="+1(234) 567-89-01"
+        required
+      />
     </mat-form-field>
+  </div>
+  <div>
     <mat-form-field>
-        <mat-label>Phone number</mat-label>
-        <input matInput phoneMask formControlName="phoneNumber" maxlength="17" placeholder="+1(234) 567-89-01" required />
-    </mat-form-field>
-    <div>
-        <button mat-button matStepperNext>Next</button>
-    </div>
+        <mat-label>Create password</mat-label>
+        <input
+          matInput
+          [type]="hideFirstPas ? 'password' : 'text'"
+          formControlName="firstPas"
+          maxlength="15"
+          required
+        />
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="hideFirstPas = !hideFirstPas"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hideFirstPas"
+        >
+          <mat-icon>{{ !hideFirstPas ? "visibility_off" : "visibility" }}</mat-icon>
+        </button>
+      </mat-form-field>
+    
+      <mat-form-field>
+        <mat-label>Repeat password</mat-label>
+        <input
+          matInput
+          [type]="hideSecondPas ? 'password' : 'text'"
+          formControlName="secondPas"
+          maxlength="15"
+          required
+        />
+        <mat-error *ngIf="secondPas.hasError('pasError')">
+          Passwords must be equal
+        </mat-error>
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="hideSecondPas = !hideSecondPas"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hideSecondPas"
+        >
+          <mat-icon>{{ !hideSecondPas ? "visibility_off" : "visibility" }}</mat-icon>
+        </button>
+      </mat-form-field>
+  </div>
+  <div>
+    <button mat-button matStepperNext>Next</button>
+  </div>
 </form>
