--- a/src/app/register/components/first-step/first-step.component.scss
+++ b/src/app/register/components/first-step/first-step.component.scss
@@ -2,7 +2,12 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    mat-form-field{
-        width: 50%;
+    div{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        mat-form-field{
+            width: 45%;
+        }    
     }
 }
