--- a/src/app/register/components/second-step/second-step.component.html
+++ b/src/app/register/components/second-step/second-step.component.html
@@ -1,17 +1,11 @@
 <form [formGroup]="form">
     <mat-form-field class="example-full-width">
-        <input matInput notDigits [matAutocomplete]="auto" formControlName="countryAndCity" placeholder="Country name" required />
+        <input matInput [matAutocomplete]="auto" formControlName="address" placeholder="Ex. 1 Main St, New York, NY" required />
         <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let country of countries$ | async" [value]="country.name">
-                <img class="country-option-img" aria-hidden [src]="country.flag" height="25" />
-                <span>{{ country.name }}</span> |
-                <small>Population: {{ country.population | number:'1.0-0' }}</small>
+            <mat-option *ngFor="let option of address$ | async" [value]="option.formatted_address">
+                <span>{{ option.formatted_address }}</span>
             </mat-option>
         </mat-autocomplete>
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Address</mat-label>
-        <input matInput formControlName="streetAndIndex" placeholder="Ex. 1 Main St, New York, NY" required />
     </mat-form-field>
     <div>
         <button mat-button matStepperPrevious>Back</button>
