--- a/src/app/register/components/third-step/third-step.component.scss
+++ b/src/app/register/components/third-step/third-step.component.scss
@@ -1,25 +1,4 @@
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    mat-form-field{
-        text-align: center;
-    }
-
-}
-#cardInf{
+div {
     display: flex;
     justify-content: center;
-    mat-form-field{
-        width: 60px;
-    }
-    #cardDate{
-        display: flex;
-        align-items: center;
-        margin-right: 10px;
-        
-        mat-form-field{
-            width: 40px;
-        }
-    }
 }
