--- a/src/app/register/containers/register/register.container.html
+++ b/src/app/register/containers/register/register.container.html
@@ -1,5 +1,5 @@
 <h1>Registration in 3 steps</h1>
-<mat-horizontal-stepper linear #stepper>
+<mat-horizontal-stepper [linear]="false" #stepper>
     <mat-step [stepControl]="firstFormGroup">
         <ng-template matStepLabel>Fill out your information</ng-template>
         <first-step [form]="firstFormGroup"></first-step>
