--- a/src/app/register/components/card/card.component.scss
+++ b/src/app/register/components/card/card.component.scss
@@ -12,7 +12,7 @@ form {
 
         #cardNumber {
             position: absolute;
-            top: 35%;
+            top: 28%;
             left: 20%;
             width: 60%;
             input {
@@ -25,7 +25,7 @@ form {
             justify-content: space-between;
             position: absolute;
             left: 20%;
-            top: 60%;
+            top: 55%;
             width: 60%;
             mat-form-field{
                 width: 60px;
@@ -37,6 +37,9 @@ form {
                 
                 mat-form-field{
                     width: 50px;
+                }
+                p {
+                    font-size: 30px;
                 }
             }
         }
