--- a/src/app/register/components/first-step/first-step.component.html
+++ b/src/app/register/components/first-step/first-step.component.html
@@ -57,10 +57,8 @@
           mat-icon-button
           matSuffix
           (click)="hideFirstPas = !hideFirstPas"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hideFirstPas"
         >
-          <mat-icon>{{ !hideFirstPas ? "visibility_off" : "visibility" }}</mat-icon>
+          <mat-icon>{{ hideFirstPas ? "visibility" : "visibility_off" }}</mat-icon>
         </button>
       </mat-form-field>
     
@@ -80,10 +78,8 @@
           mat-icon-button
           matSuffix
           (click)="hideSecondPas = !hideSecondPas"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hideSecondPas"
         >
-          <mat-icon>{{ !hideSecondPas ? "visibility_off" : "visibility" }}</mat-icon>
+          <mat-icon>{{ hideSecondPas ? "visibility" : "visibility_off" }}</mat-icon>
         </button>
       </mat-form-field>
   </div>
