--- a/src/app/layout/views/header/header.view.html
+++ b/src/app/layout/views/header/header.view.html
@@ -1,1 +1,1 @@
-<header-container [urlStream$]="urlStream$" (logout)="goToLogin()"></header-container>
+<header-container (logout)="goToLogin()"></header-container>
