--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -1,8 +1,11 @@
 <div id="authors">
-
   <div id="tableContent">
-    <table mat-table [dataSource]="dataSource" matSort
-      class="mat-elevation-z8 data-table">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      class="mat-elevation-z8 data-table"
+    >
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
         <td mat-cell *matCellDef="let author">{{ author.id }}</td>
@@ -19,11 +22,16 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let author; columns: displayedColumns"
-        [routerLink]="['/author', author.id]"></tr>
+      <tr
+        mat-row
+        *matRowDef="let author; columns: displayedColumns"
+      ></tr>
     </table>
 
-    <app-paginator [records]="authors.length" [limits]="[10, 25, 50]"
-      (create)="takePaginator($event)"></app-paginator>
+    <app-paginator
+      [records]="authors.length"
+      [limits]="[10, 25, 50]"
+      (create)="takePaginator($event)"
+    ></app-paginator>
   </div>
 </div>
